@@ -10,7 +10,7 @@ export(getPathTemplate)
 export(getPatientColorPalette)
 export(getPatientShapePalette)
 export(knitPrintListPlotsKnitr)
-export(loadDataADaM)
+export(loadDataADaMSDTM)
 export(subjectProfileCombine)
 export(subjectProfileEventPlot)
 export(subjectProfileIntervalPlot)
